--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ nav #brand {
       display: block;
       margin-left: 82px;
       line-height: 80px;
-      font-weight: bold;
+     font-size:22px;
 }
 
 nav #brand a {
