--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ h6 {
 }
 
 .project1 {
-      background: url(https://images.unsplash.com/photo-1540349220179-09d3866f2e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2600&q=80) no-repeat 50% 50%;
+      background: url(https://github.com/codynem/Minimal-Portfolio-Website/blob/master/emiliano-vittoriosi-3FSBkX4yG80-unsplash.jpg) no-repeat 50% 50%;
       background-size: cover;
 }
 
