--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ h6 {
 }
 
 .project1::after {
-      content: "timeless flow.";
+      content: "Cottontail .";
       font-family: "Roboto Mono";
       font-size: 36px;
       position: relative;
