--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ h6 {
 }
 
 .project1 {
-      background: url(https://github.com/codynem/Minimal-Portfolio-Website/blob/master/emiliano-vittoriosi-3FSBkX4yG80-unsplash.jpg) no-repeat 50% 50%;
+      background: url(emiliano-vittoriosi-3FSBkX4yG80-unsplash.jpg) no-repeat 50% 50%;
       background-size: cover;
 }
 
