--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ h6 {
 }
 
 .project2 {
-      background: url(https://images.unsplash.com/photo-1468870045442-e7d799d8c98a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2448&q=80) no-repeat 50% 50%;
+      background: url(daniel-watson-ETXsxLOz_NY-unsplash.jpg) no-repeat 50% 50%;
       background-size: cover;
 }
 
