--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ h6 {
 }
 
 .project3 {
-      background: url(https://images.unsplash.com/photo-1482501157762-56897a411e05?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80) no-repeat 50% 50%;
+      background: url(andriyko-podilnyk-fHWVmSy9k9Y-unsplash.jpg) no-repeat 50% 50%;
       background-size: cover;
 }
 
