--- a/style.css
+++ b/style.css
@@ -516,7 +516,7 @@ h6 {
 }
 
 .image {
-      background: url(dibbendu-koley-Kdt8562RxlQ-unsplash (1).jpg) no-repeat 50% 70%;
+      background: url(dibbendu-koley-Kdt8562RxlQ-unsplashss.jpg) no-repeat 50% 70%;
 }
 
 /*--------------- contact form --------------- */
