--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ nav #brand {
       margin-left: 82px;
       line-height: 80px;
      font-size:22px;
+      font-weight: 300;
 }
 
 nav #brand a {
