--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@ h6 {
 }
 
 .project1::after {
-      content: 
+      content:"cottontail";
       font-family: "Roboto Mono";
       font-size: 36px;
       position: relative;
