--- a/style.css
+++ b/style.css
@@ -520,6 +520,13 @@ h6 {
       background: url(kids.jpg) no-repeat 50% 70%;
 }
 
+/*---------------canmore page --------------- */
+
+
+.image1 {
+      background: url(kids.jpg) no-repeat 50% 70%;
+}
+
 /*--------------- contact form --------------- */
 
 #contact-form {
