--- a/style.css
+++ b/style.css
@@ -524,7 +524,8 @@ h6 {
 
 
 .image1 {
-      background: url(kids.jpg) no-repeat 50% 70%;
+      background: url(3_2 - Photo.jpg) no-repeat 50% 70%;
+      3_2 - Photo.jpg
 }
 
 /*--------------- contact form --------------- */
