--- a/style.css
+++ b/style.css
@@ -517,7 +517,7 @@ h6 {
 }
 
 .image {
-      background: url(kids.jpg) no-repeat 50% 70%;
+      background: url(3_2 - Photo.jpg) no-repeat 50% 70%;
 }
 
 /*---------------canmore page --------------- */
@@ -525,7 +525,7 @@ h6 {
 
 .image1 {
       background: url(3_2 - Photo.jpg) no-repeat 50% 70%;
-      3_2 - Photo.jpg
+      
 }
 
 /*--------------- contact form --------------- */
