--- a/style.css
+++ b/style.css
@@ -266,7 +266,8 @@ nav #menu li a:hover {
       border-bottom: 2px solid #fff;
       border-right: 2px solid #fff;
       -webkit-transform: translate(-50%, 0) rotate(45deg);
-      animation: fade_move_down 3s cubic-bezier(0.19, 1, 0.22, 1) infinite;
+      animation: 
+            _move_down 3s cubic-bezier(0.19, 1, 0.22, 1) infinite;
 }
 
 @keyframes fade_move_down {
@@ -517,16 +518,12 @@ h6 {
 }
 
 .image {
-      background: url(3_2 - Photo.jpg) no-repeat 50% 70%;
+      background: url(front.jpg) no-repeat 50% 70%;
 }
 
-/*---------------canmore page --------------- */
 
-
-.image1 {
-      background: url(3_2 - Photo.jpg) no-repeat 50% 70%;
       
-}
+
 
 /*--------------- contact form --------------- */
 
