--- a/style.css
+++ b/style.css
@@ -518,7 +518,7 @@ h6 {
 }
 
 .image {
-      background: url(front.jpg) no-repeat 50% 70%;
+      background: url(front1.jpg) no-repeat 50% 70%;
 }
 
 
