--- a/style.css
+++ b/style.css
@@ -78,9 +78,9 @@ nav {
 
 nav #brand {
       float: left;
-      display: block;
+      /*display: block;
       margin-left: 82px;
-      /*line-height: 80px;
+      line-height: 80px;
      font-size:22px;
       font-weight: 300;*/
       background: url(mlogo.jpg) no-repeat 50% 50%;
