--- a/style.css
+++ b/style.css
@@ -76,18 +76,23 @@ nav {
       z-index: 1;
 }
 
+.image1{
+      display: inline-block;
+      
+}
+/*
 nav #brand {
       float: left;
-      /*display: block;
+      display: block;
       margin-left: 82px;
       line-height: 80px;
      font-size:22px;
-      font-weight: 300;*/
+      font-weight: 300;
       background: url(mlogo.jpg) no-repeat 50% 50%;
       background-size: cover;
       
 }
-/*
+
 nav #brand a {
       color: #fff;
       transition: all 0.3s ease-out;
