--- a/style.css
+++ b/style.css
@@ -77,26 +77,25 @@ nav {
 }
 
 .image1{
-      float: left;
-      display: block;
+    
         max-width: 300px;
   max-height: 300px;
-       margin-left: 82px;
+       
       
 }
-/*
+
 nav #brand {
       float: left;
       display: block;
       margin-left: 82px;
-      line-height: 80px;
+      /*line-height: 80px;
      font-size:22px;
       font-weight: 300;
       background: url(mlogo.jpg) no-repeat 50% 50%;
-      background-size: cover;
+      background-size: cover;*/
       
 }
-
+/*
 nav #brand a {
       color: #fff;
       transition: all 0.3s ease-out;
