--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ nav #menu {
 
 nav #menu li {
       padding-left: 40px;
+      margin-top: 100px;
       display: inline-block;
       cursor: pointer;
       font-weight: 300;
