--- a/style.css
+++ b/style.css
@@ -75,14 +75,14 @@ nav {
       position: fixed;
       z-index: 1;
 }
-
+/*
 .image1{
     
         max-width: 280px;
   max-height: 250px;
        
       
-}
+}*/
 
 nav #brand {
       float: left;
