--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ html, body {
       color: #fff !important;
 }
 
+.wrapper{
+      background: #333;
+}
+      
+
 .whitespace {
       width: 100%;
       height: 100px;
