--- a/style.css
+++ b/style.css
@@ -319,6 +319,7 @@ h6 {
       background: url(pexels-mati-mango-3820509big.jpg) no-repeat 50% 50%;
       background-size: cover;
        box-shadow: 5px 5px 50px 5px;
+       background-color: #333;
 }
 
 .project1::after {
